--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -56,13 +57,13 @@
             <Font name="System Bold" size="12.0" />
          </font></Text>
       <ColorPicker fx:id="colorPicker" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="919.0" layoutY="733.0" onAction="#colorPickerClicked" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" />
-      <Text fontSmoothingType="LCD" layoutX="654.0" layoutY="688.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pattern Link">
+      <Text fontSmoothingType="LCD" layoutX="654.0" layoutY="688.0" strokeType="OUTSIDE" strokeWidth="0.0">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Text>
-      <Button fx:id="patternLoad" layoutX="783.0" layoutY="733.0" mnemonicParsing="false" onAction="#patternLoad" style="-fx-border-color: black; -fx-border-radius: 3;" text="Load Pattern" />
-      <TextField fx:id="textBox" layoutX="674.0" layoutY="733.0" prefHeight="27.0" prefWidth="109.0" style="-fx-border-color: black; -fx-border-radius: 3;" />
-      <Button fx:id="randomButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="489.0" layoutY="733.0" mnemonicParsing="false" onAction="#clickedRandomButton" prefHeight="27.0" prefWidth="98.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="RANDOM" />
+      <Button layoutX="747.0" layoutY="692.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="120.0" style="-fx-border-color: black; -fx-border-radius: 3;" text="Load Pattern" />
+      <TextField layoutX="634.0" layoutY="692.0" prefHeight="27.0" prefWidth="109.0" promptText="Pattern Link" style="-fx-border-color: black; -fx-border-radius: 3;" />
+      <Button fx:id="randomButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="747.0" layoutY="730.0" mnemonicParsing="false" onAction="#clickedRandomButton" prefHeight="27.0" prefWidth="56.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="Draw" />
       <ImageView fitHeight="83.0" fitWidth="507.0" layoutX="371.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Game-of-Life.png" />
@@ -141,7 +142,7 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </ToggleButton>
-      <Button fx:id="randomButton1" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="807.0" layoutY="730.0" mnemonicParsing="false" onAction="#clickedRandomButton" prefHeight="27.0" prefWidth="56.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="Save" />
+      <Button cacheShape="false" centerShape="false" focusTraversable="false" layoutX="807.0" layoutY="730.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="56.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="Save" />
    </children>
    <opaqueInsets>
       <Insets />
