--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -38,17 +38,17 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Slider fx:id="cellSlider" blockIncrement="1.0" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="947.0" layoutY="691.0" majorTickUnit="2.0" max="40.0" min="1.0" minorTickCount="2" onMouseClicked="#CellSizeClicked" onMouseDragged="#CellSizeClicked" prefHeight="14.0" prefWidth="98.0" scaleShape="false" value="10.0">
+      <Slider fx:id="cellSlider" blockIncrement="1.0" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="948.0" layoutY="683.0" majorTickUnit="2.0" max="40.0" min="1.0" minorTickCount="2" onMouseClicked="#CellSizeClicked" onMouseDragged="#CellSizeClicked" prefHeight="14.0" prefWidth="120.0" scaleShape="false" value="10.0">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
       </Slider>
-      <Slider fx:id="sliderFPS" blockIncrement="30.0" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="947.0" layoutY="710.0" majorTickUnit="30.0" max="60.0" min="1.0" minorTickCount="5" onMouseClicked="#FPSClicked" onMouseDragged="#FPSClicked" prefHeight="14.0" prefWidth="98.0" scaleShape="false" style="-fx-major-tick-unit: 10;" value="30.0">
+      <Slider fx:id="sliderFPS" blockIncrement="30.0" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="947.0" layoutY="710.0" majorTickUnit="30.0" max="60.0" min="1.0" minorTickCount="5" onMouseClicked="#FPSClicked" onMouseDragged="#FPSClicked" prefHeight="14.0" prefWidth="120.0" scaleShape="false" style="-fx-major-tick-unit: 10;" value="30.0">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
       </Slider>
-      <Text fontSmoothingType="LCD" layoutX="1123.0" layoutY="696.0" strokeLineCap="BUTT" strokeType="OUTSIDE" strokeWidth="0.0" text="MusicPlayer" textAlignment="CENTER" wrappingWidth="85.0">
+      <Text fontSmoothingType="LCD" layoutX="1132.0" layoutY="696.0" strokeLineCap="BUTT" strokeType="OUTSIDE" strokeWidth="0.0" text="MusicPlayer" textAlignment="CENTER" wrappingWidth="85.0">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Text>
@@ -56,20 +56,20 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Text>
-      <ColorPicker fx:id="colorPicker" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="919.0" layoutY="733.0" onAction="#colorPickerClicked" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" />
+      <ColorPicker fx:id="colorPicker" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="945.0" layoutY="730.0" onAction="#colorPickerClicked" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" />
       <Text fontSmoothingType="LCD" layoutX="654.0" layoutY="688.0" strokeType="OUTSIDE" strokeWidth="0.0">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Text>
-      <Button fx:id="patternLoad" layoutX="747.0" layoutY="692.0" mnemonicParsing="false" onAction="#patternLoad" prefHeight="27.0" prefWidth="120.0" style="-fx-border-color: black; -fx-border-radius: 3;" text="Load Pattern" />
-      <TextField fx:id="textBox" layoutX="634.0" layoutY="692.0" prefHeight="27.0" prefWidth="109.0" promptText="Pattern Link" style="-fx-border-color: black; -fx-border-radius: 3;" />
-      <Button fx:id="randomButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="747.0" layoutY="730.0" mnemonicParsing="false" onAction="#clickedRandomButton" prefHeight="27.0" prefWidth="56.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="Draw" />
+      <Button fx:id="patternLoad" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="747.0" layoutY="692.0" mnemonicParsing="false" onAction="#patternLoad" prefHeight="27.0" prefWidth="120.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="Load Pattern" />
+      <TextField fx:id="textBox" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="634.0" layoutY="692.0" prefHeight="27.0" prefWidth="109.0" promptText="Pattern Link" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" />
+      <Button fx:id="drawPattern" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="747.0" layoutY="730.0" mnemonicParsing="false" onAction="#clickedDrawButton" prefHeight="27.0" prefWidth="56.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="Draw" />
       <ImageView fitHeight="83.0" fitWidth="507.0" layoutX="371.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Game-of-Life.png" />
          </image>
       </ImageView>
-      <ChoiceBox fx:id="choiceBox" layoutX="634.0" layoutY="730.0" prefHeight="27.0" prefWidth="109.0" style="-fx-border-radius: 3; -fx-border-color: Black;" />
+      <ChoiceBox fx:id="patternChoiceBox" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="634.0" layoutY="730.0" prefHeight="27.0" prefWidth="109.0" scaleShape="false" style="-fx-border-radius: 3; -fx-border-color: Black;" />
       <ToolBar fx:id="Toolbar" onDragDetected="#clickedToolbar" onMousePressed="#clickedToolbar" prefHeight="16.0" prefWidth="1280.0" style="-fx-border-color: black; -fx-border-radius: 2; -fx-background-color: rgb(250,250,250); -fx-border-width: 2; -fx-background-radius: 2;">
          <items>
             <MenuBar blendMode="SRC_ATOP" cacheShape="false" centerShape="false" depthTest="DISABLE" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="25.0" prefWidth="113.0" scaleShape="false" style="-fx-background-color: rgb(250,250,250);">
@@ -128,16 +128,16 @@
             <Image url="@Glider.png" />
          </image>
       </ImageView>
-      <ChoiceBox fx:id="musicChoiceBox" layoutX="1073.0" layoutY="733.0" prefHeight="27.0" prefWidth="175.0" style="-fx-background-radius: 3; -fx-border-color: black; -fx-border-radius: 3;" />
-      <Button fx:id="musicStartButton" layoutX="1073.0" layoutY="703.0" mnemonicParsing="false" onAction="#clickedMusicStartButton" prefHeight="17.0" prefWidth="56.0" style="-fx-border-color: black; -fx-border-radius: 3; -fx-background-radius: 3; -fx-background-color: #3fa34e;" text="▶" />
-      <Text fontSmoothingType="LCD" layoutX="891.0" layoutY="702.0" strokeLineCap="BUTT" strokeType="OUTSIDE" strokeWidth="0.0" text="CellSize" textAlignment="RIGHT" wrappingWidth="55.99998474121094">
+      <ChoiceBox fx:id="musicChoiceBox" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="1093.0" layoutY="730.0" prefHeight="25.0" prefWidth="162.0" scaleShape="false" style="-fx-background-radius: 3; -fx-border-color: black; -fx-border-radius: 3;" />
+      <Button fx:id="musicStartButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="1125.0" layoutY="703.0" mnemonicParsing="false" onAction="#clickedMusicStartButton" prefHeight="27.0" prefWidth="35.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3; -fx-background-radius: 3; -fx-background-color: #3fa34e;" text="▶" />
+      <Text fontSmoothingType="LCD" layoutX="891.0" layoutY="693.0" strokeLineCap="BUTT" strokeType="OUTSIDE" strokeWidth="0.0" text="CellSize" textAlignment="RIGHT" wrappingWidth="55.99998474121094">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Text>
-      <Button fx:id="musicStopButton" layoutX="1192.0" layoutY="703.0" mnemonicParsing="false" onAction="#clickedMusicStopButton" prefHeight="25.0" prefWidth="56.0" style="-fx-border-color: black; -fx-border-radius: 3; -fx-background-radius: 3; -fx-background-color: #bf3333;" text="⏹" />
-      <Button fx:id="musicPauseButton" layoutX="1133.0" layoutY="703.0" mnemonicParsing="false" onAction="#clickedMusicPauseButton" prefHeight="27.0" prefWidth="56.0" style="-fx-border-color: black; -fx-border-radius: 3; -fx-background-radius: 3; -fx-background-color: lightgrey;" text="⏸" />
-      <ToggleButton layoutX="270.0" layoutY="702.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="109.0" style="-fx-border-color: black; -fx-border-radius: 3; -fx-background-radius: 3;" text="Toggle DynamicBoard" textAlignment="CENTER" wrapText="true">
+      <Button fx:id="musicStopButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="1192.0" layoutY="703.0" mnemonicParsing="false" onAction="#clickedMusicStopButton" prefHeight="27.0" prefWidth="35.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3; -fx-background-radius: 3; -fx-background-color: #bf3333;" text="⏹" />
+      <Button fx:id="musicPauseButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="1157.0" layoutY="703.0" mnemonicParsing="false" onAction="#clickedMusicPauseButton" prefHeight="27.0" prefWidth="35.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3; -fx-background-radius: 3; -fx-background-color: lightgrey;" text="⏸" />
+      <ToggleButton fx:id="toggleBoard" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="270.0" layoutY="705.0" mnemonicParsing="false" onAction="#clickedToggleBoard" prefHeight="56.0" prefWidth="109.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3; -fx-background-radius: 3;" text="Toggle DynamicBoard" textAlignment="CENTER" wrapText="true">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
