--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -77,7 +77,7 @@
       <ChoiceBox fx:id="patternChoiceBox" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="634.0" layoutY="730.0" prefHeight="27.0" prefWidth="109.0" scaleShape="false" style="-fx-border-radius: 3; -fx-border-color: Black;" />
       <ToolBar fx:id="Toolbar" onDragDetected="#clickedToolbar" onMousePressed="#clickedToolbar" prefHeight="16.0" prefWidth="1280.0" style="-fx-border-color: black; -fx-border-radius: 2; -fx-background-color: rgb(250,250,250); -fx-border-width: 2; -fx-background-radius: 2;">
          <items>
-            <MenuBar blendMode="SRC_ATOP" cacheShape="false" centerShape="false" depthTest="DISABLE" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="25.0" prefWidth="105.0" scaleShape="false" style="-fx-background-color: rgb(250,250,250);">
+            <MenuBar blendMode="SRC_ATOP" cacheShape="false" centerShape="false" depthTest="DISABLE" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="25.0" prefWidth="127.0" scaleShape="false" style="-fx-background-color: rgb(250,250,250);">
                <menus>
                   <Menu text="File">
                      <items>
@@ -115,7 +115,7 @@
                   </ContextMenu>
                </contextMenu>
             </MenuBar>
-            <Text fx:id="tekst" strokeType="OUTSIDE" strokeWidth="0.0" text="Metadata" wrappingWidth="1117.9857788085938" />
+            <Text fx:id="tekst" strokeType="OUTSIDE" strokeWidth="0.0" text="meta" wrappingWidth="1094.9857788085938" />
             <Button fx:id="exitButton" alignment="CENTER_RIGHT" cacheShape="false" centerShape="false" contentDisplay="RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#clickedExitButton" prefHeight="27.0" prefWidth="22.0" scaleShape="false" style="-fx-border-color: black; -fx-background-radius: 5; -fx-border-radius: 5;" text="☓" textAlignment="CENTER" textOverrun="CLIP" wrapText="true">
                <font>
                   <Font name="System Bold" size="15.0" />
