--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -100,7 +100,7 @@
                   </Menu>
                   <Menu mnemonicParsing="false" text="Help">
                      <items>
-                        <MenuItem mnemonicParsing="false" text="About" />
+                        <MenuItem fx:id="aboutButton" mnemonicParsing="false" onAction="#aboutButtonClicked" text="About" />
                      </items>
                   </Menu>
                </menus>
