--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -32,7 +32,7 @@
             <Font name="Arial Bold" size="12.0" />
          </font>
       </Button>
-      <Canvas fx:id="CanvasId" accessibleRole="BUTTON" focusTraversable="true" height="559.0" layoutX="13.0" layoutY="114.0" onMouseDragged="#CanvasPressed" onMousePressed="#CanvasPressed" onMouseReleased="#CanvasReleased" pickOnBounds="true" style="-fx-effect: dropshadow(one-pass-box, rgba(0,0,0,1), 5, 5, 0, 0);" width="1252.0" />
+      <Canvas fx:id="CanvasId" accessibleRole="BUTTON" focusTraversable="true" height="559.0" layoutX="13.0" layoutY="114.0" onMouseDragged="#CanvasPressed" onMousePressed="#CanvasPressed" pickOnBounds="true" style="-fx-effect: dropshadow(one-pass-box, rgba(0,0,0,1), 5, 5, 0, 0);" width="1252.0" />
       <Button fx:id="stopButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="163.0" layoutY="689.0" mnemonicParsing="false" onAction="#clickedStopButton" prefHeight="33.0" prefWidth="98.0" scaleShape="false" style="-fx-border-color: BLACK; -fx-border-radius: 3;" text="STOP">
          <font>
             <Font name="System Bold" size="12.0" />
@@ -68,7 +68,7 @@
          </font></Text>
       <Button fx:id="patternLoad" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="769.0" layoutY="692.0" mnemonicParsing="false" onAction="#patternLoad" prefHeight="27.0" prefWidth="109.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="Load Pattern" />
       <TextField fx:id="textBox" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="654.0" layoutY="692.0" prefHeight="27.0" prefWidth="109.0" promptText="Pattern Link" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" />
-      <Button fx:id="drawPattern" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="769.0" layoutY="730.0" mnemonicParsing="false" onAction="#clickedDrawButton" prefHeight="27.0" prefWidth="109.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="Draw" />
+      <Button fx:id="drawPattern" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="769.0" layoutY="730.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="109.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="Draw" />
       <ImageView fitHeight="83.0" fitWidth="507.0" layoutX="371.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Pictures/Game-of-Life.png" />
@@ -100,7 +100,7 @@
                   </Menu>
                   <Menu mnemonicParsing="false" text="Help">
                      <items>
-                        <MenuItem fx:id="aboutButton" mnemonicParsing="false" onAction="#aboutButtonClicked" text="About" />
+                        <!--MenuItem fx:id="aboutButton" mnemonicParsing="false" onAction="#aboutButtonClicked" text="About" /-->
                      </items>
                   </Menu>
                </menus>
@@ -134,7 +134,7 @@
          </image>
       </ImageView>
       <ChoiceBox fx:id="musicChoiceBox" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="1093.0" layoutY="730.0" prefHeight="25.0" prefWidth="162.0" scaleShape="false" style="-fx-background-radius: 3; -fx-border-color: black; -fx-border-radius: 3;" />
-      <Button fx:id="musicStartButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="1113.0" layoutY="697.0" mnemonicParsing="false" onAction="#clickedMusicStartButton" prefHeight="25.0" prefWidth="37.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3; -fx-background-radius: 3; -fx-background-color: #3fa34e;" text="▶" />
+      <Button fx:id="musicStartButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="1113.0" layoutY="697.0" mnemonicParsing="false"  prefHeight="25.0" prefWidth="37.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3; -fx-background-radius: 3; -fx-background-color: #3fa34e;" text="▶" />
       <Text fontSmoothingType="LCD" layoutX="878.0" layoutY="694.0" strokeLineCap="BUTT" strokeType="OUTSIDE" strokeWidth="0.0" text="CellSize" textAlignment="RIGHT" wrappingWidth="69.99998474121094">
          <font>
             <Font name="System Bold" size="14.0" />
