--- a/src/_Game/Fxml/RulesScene.fxml
+++ b/src/_Game/Fxml/RulesScene.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -12,10 +14,20 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Text>
-      <TextArea cacheShape="false" centerShape="false" focusTraversable="false" layoutX="44.0" layoutY="59.0" prefHeight="176.0" prefWidth="561.0" scaleShape="false" text="1. Any live cell with fewer than two live neighbours dies, as if caused by underpopulation.&#10;&#10;2. Any live cell with two or three live neighbours lives on to the next generation.&#10;&#10;3. Any live cell with more than three live neighbours dies, as if by overpopulation.&#10;&#10;4. Any dead cell with exactly three live neighbours becomes a live cell, as if by reproduction.&#10;&#10;">
+      <TextArea cacheShape="false" centerShape="false" editable="false" focusTraversable="false" layoutX="44.0" layoutY="59.0" prefHeight="176.0" prefWidth="561.0" scaleShape="false" text="1. Any live cell with fewer than two live neighbours dies, as if caused by underpopulation.&#10;&#10;2. Any live cell with two or three live neighbours lives on to the next generation.&#10;&#10;3. Any live cell with more than three live neighbours dies, as if by overpopulation.&#10;&#10;4. Any dead cell with exactly three live neighbours becomes a live cell, as if by reproduction.&#10;&#10;">
          <font>
             <Font name="Arial" size="13.0" />
          </font>
       </TextArea>
+      <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="112.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Pictures/Glider.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="488.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+         <image>
+            <Image url="@../Pictures/Glider.png" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
